--- a/bidule.html
+++ b/bidule.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>bidulechouette</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo voluptates reiciendis, impedit quia dicta itaque amet ad delectus aut odit labore facilis voluptate eos fuga quas illo mollitia sapiente! Cum.</p>
     
 </body>
 </html>
