--- a/bidule.html
+++ b/bidule.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>bidulechouette</h1>
+    <img src="images/new-logo.png" alt="nouveau logo trop beau parce que je l'ai fait moi même !">
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo voluptates reiciendis, impedit quia dicta itaque amet ad delectus aut odit labore facilis voluptate eos fuga quas illo mollitia sapiente! Cum.</p>
-    
 </body>
 </html>
