--- a/bidule.html
+++ b/bidule.html
@@ -9,6 +9,14 @@
 <body>
     <h1>bidulechouette</h1>
     <img src="images/new-logo.png" alt="nouveau logo trop beau parce que je l'ai fait moi même !">
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo voluptates reiciendis, impedit quia dicta itaque amet ad delectus aut odit labore facilis voluptate eos fuga quas illo mollitia sapiente! Cum.</p>
+    <ul>
+        <li>"ls" pour afficher les dossier et les fichier (et les cachés)</li>
+        <li>Rentre dans le bon dossier avec "cd" et ressortir avec "cd ../"</li>
+        <li>"add + nomduficher" pour ajouter le fichier</li>
+        <li>"commit -m"message" pour mettre un message à la sauvegarde</li>
+        <li>"status" pour vérifier si tout est bien sauvegarder</li>
+        <li>"log" liste de tout les changement des arbres de travail</li>
+        <li>"checkout + numérodelasauvegarde" pour switcher entre les différents points de sauvegarde</li>
+    </ul>
 </body>
 </html>
