--- a/bidule.html
+++ b/bidule.html
@@ -17,6 +17,7 @@
         <li>"status" pour vérifier si tout est bien sauvegarder</li>
         <li>"log" liste de tout les changement des arbres de travail</li>
         <li>"checkout + numérodelasauvegarde" pour switcher entre les différents points de sauvegarde</li>
+        <li>"rm nomduficher" supprimer de l'arbre de travail et du dossier</li>
     </ul>
 </body>
 </html>
